<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Apollo</string>
    <string name="cd_favorite">Make this a favorite song</string>
    <string name="cd_search">Search through your music</string>
    <string name="cd_overflow">View more options</string>
    <string name="cd_bottom_action_bar_album_art">Album art for this song</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="cd_shuffle">Shuffle tracks</string>
    <string name="nowplaying">Now Playing</string>
    <string name="album_header">ALBUM LIST</string>
    <string name="track_header">TRACK LIST</string>
    <string name="settings">Settings</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="share">Share</string>
    <string name="play_store">Play Store</string>
    <string name="set_as_ringtone">\"%s\" set as ringtone</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="repeat_one">Repeat one</string>
    <string name="repeat_all">Repeat all</string>
    <string name="repeat_off">Repeat off</string>
    <string name="shuffle_off">Shuffle off</string>
    <string name="shuffle_on">Shuffle on</string>
    <string name="now_listening_to">Now listening to:</string>
    <string name="by">by</string>
    <string name="share_track_using">Share track using</string>
    <string name="play_all">Play all</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="use_as_ringtone">Use as ringtone</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="search">Search</string>
    <string name="remove">Remove from playlist</string>
    <string name="apollo_1x1">Apollo (1x1)</string>
    <string name="apollo_4x1">Apollo (4x1)</string>
    <string name="apollo_4x2">Apollo (4x2)</string>
    <string name="unknown">Unknown</string>
    <string name="about">About Apollo</string>
    <string name="eqalizer">Equalizer</string>
    <string name="header_interface">Interface</string>
    <string name="themes">Themes</string>
    <string name="apollo_themes">Select theme for Apollo</string>
    <string name="select_theme">Select your theme</string>
    <string name="version">Apollo Version</string>
    <string name="key_themes">themepreview</string>
    <string name="key_themes_package">themePackageName</string>
    <string name="key_themes_preferences">themePrefences</string>
    <string name="key_build_version">build_version</string>
    <string name="apply_theme">Apply theme</string>
    <string name="get_more_themes">Get more themes</string>
    <string name="favorite">Favorites</string>
    <string name="queue">Queue</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">Playlist %d</string>
    <string name="save">Save</string>
    <string name="overwrite">Overwrite</string>
    <string name="tab_recent">RECENT</string>
    <string name="tab_artists">ARTISTS</string>
    <string name="tab_albums">ALBUMS</string>
    <string name="tab_songs">SONGS</string>
    <string name="tab_playlists">PLAYLISTS</string>
    <string name="tab_genres">GENRES</string>
    <string name="play_external_question_msg">"Select the action to apply to: 

"<b>%s</b></string>
    <string name="play_external_question_button_play">Play</string>
    <string name="play_external_question_button_queue">Enqueue</string>
    <string name="play_external_question_button_cancel">Cancel</string>
    <string name="play_external_error">Failed to play file</string>
    <string name="error">Error</string>
</resources>
