<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/header_interface">
        <PreferenceScreen android:icon="@drawable/apollo_settings_themes" android:title="@string/themes" android:key="@string/key_themes_preferences">
            <ListPreference android:title="@string/select_theme" android:key="@string/key_themes_package" android:summary="@string/apollo_themes" />
            <com.andrew.apollo.preferences.ThemePreview android:layout="@layout/theme_preview" android:key="@string/key_themes" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference android:enabled="false" android:title="@string/version" android:key="@string/key_build_version" android:summary="1.0" style="?android:preferenceInformationStyle" />
    </PreferenceCategory>
</PreferenceScreen>