<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_action_bar_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/bottom_action_bar_control_divider" android:background="@color/holo_blue_dark" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_action_bar_divider_height" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageButton android:id="@id/bottom_action_bar_repeat" android:src="@drawable/apollo_holo_light_repeat_normal" android:layout_weight="1.0" android:contentDescription="@string/cd_repeat" style="@style/BottomActionBarItem" />
        <ImageButton android:id="@id/bottom_action_bar_previous" android:src="@drawable/apollo_holo_light_previous" android:layout_weight="1.0" android:contentDescription="@string/cd_previous" style="@style/BottomActionBarItem" />
        <ImageButton android:id="@id/bottom_action_bar_play" android:src="@drawable/apollo_holo_light_play" android:layout_weight="1.0" android:contentDescription="@string/cd_play" style="@style/BottomActionBarItem" />
        <ImageButton android:id="@id/bottom_action_bar_next" android:src="@drawable/apollo_holo_light_next" android:layout_weight="1.0" android:contentDescription="@string/cd_next" style="@style/BottomActionBarItem" />
        <ImageButton android:id="@id/bottom_action_bar_shuffle" android:src="@drawable/apollo_holo_light_shuffle_normal" android:layout_weight="1.0" android:contentDescription="@string/cd_shuffle" style="@style/BottomActionBarItem" />
    </LinearLayout>
</LinearLayout>