<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="horizontal" android:id="@id/four_by_two" android:background="@drawable/appwidget_bg" android:layout_width="fill_parent" android:layout_height="@dimen/four_by_two_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/four_by_two_controls" android:layout_width="fill_parent" android:layout_height="@dimen/four_by_two_control_height" android:layout_alignParentBottom="true">
        <ImageButton android:id="@id/four_by_two_control_prev" android:src="@drawable/apollo_holo_light_previous" android:contentDescription="@string/cd_previous" style="@style/FourByTwoMediaButton" />
        <ImageButton android:id="@id/four_by_two_control_play" android:src="@drawable/apollo_holo_light_play" android:contentDescription="@string/cd_play" style="@style/FourByTwoMediaButton" />
        <ImageButton android:id="@id/four_by_two_control_next" android:src="@drawable/apollo_holo_light_next" android:contentDescription="@string/cd_next" style="@style/FourByTwoMediaButton" />
        <ImageButton android:id="@id/four_by_two_control_shuffle" android:src="@drawable/apollo_holo_light_shuffle_normal" android:contentDescription="@string/cd_shuffle" style="@style/FourByTwoMediaButton" />
        <ImageButton android:id="@id/four_by_two_control_repeat" android:src="@drawable/apollo_holo_light_repeat_normal" android:contentDescription="@string/cd_repeat" style="@style/FourByTwoMediaButton" />
    </LinearLayout>
    <ImageView android:id="@id/four_by_two_controls_info_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:scaleType="fitXY" android:layout_above="@id/four_by_two_controls" />
    <ImageView android:id="@id/four_by_two_albumart" android:layout_width="@dimen/four_by_two_album_art_width" android:layout_height="fill_parent" android:scaleType="fitXY" android:adjustViewBounds="true" android:layout_above="@id/four_by_two_controls_info_divider" />
    <ImageView android:background="@color/holo_blue_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_above="@id/four_by_two_controls" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/four_by_two_info" android:background="@drawable/holo_selector" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toRightOf="@id/four_by_two_albumart" android:layout_above="@id/four_by_two_controls">
        <TextView android:textSize="@dimen/text_size_small" android:textStyle="bold" android:textColor="@color/transparent_black" android:ellipsize="end" android:id="@id/four_by_two_trackname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/transparent_black" android:ellipsize="end" android:id="@id/four_by_two_albumname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/transparent_black" android:ellipsize="end" android:id="@id/four_by_two_artistname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
</RelativeLayout>