<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <SeekBar android:id="@*android:id/progress" android:paddingTop="@dimen/audio_player_seek_bar_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:thumb="@null" style="?android:attr/progressBarStyleHorizontal" />
        <TextView android:textSize="@dimen/text_size_small" android:textStyle="bold" android:textColor="@color/transparent_black" android:id="@id/audio_player_current_time" android:paddingLeft="@dimen/audio_player_info_container_padding" android:paddingRight="@dimen/audio_player_info_container_padding" android:layout_below="@*android:id/progress" android:layout_alignParentLeft="true" style="@style/AudioPlayerText" />
        <TextView android:textSize="@dimen/text_size_small" android:textStyle="bold" android:textColor="@color/transparent_black" android:id="@id/audio_player_total_time" android:paddingLeft="@dimen/audio_player_info_container_padding" android:paddingRight="@dimen/audio_player_info_container_padding" android:layout_below="@*android:id/progress" android:layout_alignParentRight="true" style="@style/AudioPlayerText" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:paddingBottom="@dimen/audio_player_button_container_padding" android:layout_width="fill_parent" android:layout_height="@dimen/audio_player_controls_height">
        <ImageButton android:id="@id/audio_player_repeat" android:src="@drawable/apollo_holo_light_repeat_normal" android:contentDescription="@string/cd_repeat" style="@style/AudioPlayerButton" />
        <com.andrew.apollo.ui.widgets.RepeatingImageButton android:id="@id/audio_player_prev" android:src="@drawable/apollo_holo_light_previous" style="@style/AudioPlayerButton" />
        <ImageButton android:id="@id/audio_player_play" android:src="@drawable/apollo_holo_light_pause" android:contentDescription="@string/cd_play" style="@style/AudioPlayerButton" />
        <com.andrew.apollo.ui.widgets.RepeatingImageButton android:id="@id/audio_player_next" android:src="@drawable/apollo_holo_light_next" style="@style/AudioPlayerButton" />
        <ImageButton android:id="@id/audio_player_shuffle" android:src="@drawable/apollo_holo_light_shuffle_normal" android:contentDescription="@string/cd_shuffle" style="@style/AudioPlayerButton" />
    </LinearLayout>
</merge>