<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/appwidget_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/four_by_one_albumart" android:layout_width="@dimen/four_by_one_album_art_width" android:layout_height="fill_parent" android:scaleType="centerCrop" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/four_by_one_album_appwidget" android:background="@drawable/holo_selector" android:paddingLeft="4.0dip" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.0">
        <TextView android:textSize="@dimen/text_size_small" android:textStyle="bold" android:textColor="@color/transparent_black" android:ellipsize="end" android:id="@id/four_by_one_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/transparent_black" android:ellipsize="end" android:id="@id/four_by_one_artist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
    <ImageButton android:id="@id/four_by_one_control_prev" android:background="@drawable/holo_selector" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/apollo_holo_light_previous" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/cd_previous" />
    <ImageView android:background="@color/transparent_black" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
    <ImageButton android:id="@id/four_by_one_control_play" android:background="@drawable/holo_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/apollo_holo_light_play" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/cd_play" />
    <ImageView android:background="@color/transparent_black" android:layout_width="0.20000005dip" android:layout_height="fill_parent" />
    <ImageButton android:id="@id/four_by_one_control_next" android:background="@drawable/holo_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/apollo_holo_light_next" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/cd_next" />
</LinearLayout>